🧹 Refactor: GithubHttpClient.getCommit 메서드 반환값 제거 및 null-safe 처리 적용