@@ -9,6 +9,7 @@ import org.springframework.http.*;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestTemplate;
 
+import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -17,9 +18,11 @@ import java.util.List;
 public class GithubHttpClient {
 
     private final RestTemplate restTemplate = new RestTemplate();
+    private static final ObjectMapper mapper = new ObjectMapper();
 
-    // ========== 기존 commit 조회 ========== //
-    public Object getCommit(String owner, String repo, String sha, String accessToken) {
+    // Commit 조회 (Raw JSON 반환)
+    public void getCommit(String owner, String repo, String sha, String accessToken) {
+
         String url = "https://api.github.com/repos/" + owner + "/" + repo + "/commits/" + sha;
 
         HttpHeaders headers = new HttpHeaders();
@@ -29,13 +32,18 @@ public class GithubHttpClient {
         HttpEntity<Void> entity = new HttpEntity<>(headers);
 
         ResponseEntity<Object> response = restTemplate.exchange(
-                url, HttpMethod.GET, entity, Object.class
+                url,
+                HttpMethod.GET,
+                entity,
+                Object.class
         );
 
-        return response.getBody();
+        if (response.getBody() == null) {
+            throw new RuntimeException("GitHub API returned empty commit response");
+        }
     }
 
-    // ========== Repo 목록 조회 ========== //
+    // Repo 목록 조회 (null-safe 처리)
     public List<GithubRepoResponse> getRepos(String accessToken) {
 
         HttpHeaders headers = new HttpHeaders();
@@ -51,11 +59,19 @@ public class GithubHttpClient {
                 GithubRepoResponse[].class
         );
 
-        return List.of(response.getBody());
+        GithubRepoResponse[] body = response.getBody();
+
+        if (body == null) {
+            log.warn("GitHub API returned null for /user/repos — returning empty list.");
+            return Collections.emptyList();
+        }
+
+        return List.of(body);
     }
 
-    // ========== PR Head SHA 조회 ========== //
+    // PR Head SHA 조회 (null-safe 처리)
     public String getPrHeadSha(String owner, String repo, int prNumber, String accessToken) {
+
         String url = "https://api.github.com/repos/" + owner + "/" + repo + "/pulls/" + prNumber;
 
         HttpHeaders headers = new HttpHeaders();
@@ -71,12 +87,16 @@ public class GithubHttpClient {
                 String.class
         );
 
+        String body = response.getBody();
+        if (body == null) {
+            throw new RuntimeException("GitHub API returned empty PR response");
+        }
+
         try {
-            ObjectMapper mapper = new ObjectMapper();
-            JsonNode root = mapper.readTree(response.getBody());
+            JsonNode root = mapper.readTree(body);
             return root.path("head").path("sha").asText();
         } catch (Exception e) {
-            throw new RuntimeException("Failed to extract head SHA");
+            throw new RuntimeException("Failed to extract PR head SHA", e);
         }
     }
 }
